// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should render correctly 1`] = `
<div>
  <header
    style="background: rgba(3, 3, 3, 0);"
  >
    <section
      class="navbar-container"
    >
      <h2
        class="title"
      >
        Boundless Book Bazaar
      </h2>
      <nav
        class="nav"
      >
        <a
          class="text-link"
          href="/"
        >
          Home
        </a>
        <a
          class="text-link"
          href="/shop"
        >
          Shop
        </a>
      </nav>
    </section>
  </header>
  <main>
    <section
      class="home-container"
    >
      <h1
        class="main-title"
      >
        The #1 Destination for all your Reading Needs
      </h1>
      <a
        class="main-btn"
        href="/shop"
      >
        Shop Now
      </a>
    </section>
    <section
      class="more-info"
    >
      <img
        alt="several books"
        class="books"
        src="https://images.unsplash.com/photo-1495446815901-a7297e633e8d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
      />
      <section
        class="more-info-text"
      >
        <h2
          class="more-info-heading"
        >
          Whatever type of book you like, we have
        </h2>
        <p
          class="more-info-para"
        >
          Browse our selection in the interactive online shop
        </p>
      </section>
    </section>
  </main>
  <footer>
    <p
      class="footer-para"
    >
      Check me out on
       
      <a
        class="footer-link"
        href="https://github.com/scastoro"
      >
        GitHub
      </a>
    </p>
  </footer>
</div>
`;

exports[`Cart component should render correctly 1`] = `
<div>
  <section
    class="cart"
    role="dialog"
  >
    <h3>
      Shopping Cart
    </h3>
    <section
      class="cart-items"
    >
      <section
        class="item-list"
      >
        <h4
          class="item-title"
        >
          foo
        </h4>
        <img
          alt=""
          class="item-img"
          src=""
        />
        <section
          class="item-info"
        >
          <label
            for="count"
          >
            Quantity: 
          </label>
          <button
            class="item-sub-btn"
          >
            -
          </button>
          <input
            id="count"
            type="number"
            value="1"
          />
          <button
            class="item-add-btn"
          >
            +
          </button>
        </section>
        <p
          class="product-total"
        >
          $
          100
        </p>
      </section>
      <section
        class="item-list"
      >
        <h4
          class="item-title"
        >
          foo
        </h4>
        <img
          alt=""
          class="item-img"
          src=""
        />
        <section
          class="item-info"
        >
          <label
            for="count"
          >
            Quantity: 
          </label>
          <button
            class="item-sub-btn"
          >
            -
          </button>
          <input
            id="count"
            type="number"
            value="1"
          />
          <button
            class="item-add-btn"
          >
            +
          </button>
        </section>
        <p
          class="product-total"
        >
          $
          50
        </p>
      </section>
    </section>
    <p
      class="total"
    >
      Order total: $
    </p>
    <button
      class="checkout-btn"
    >
      Checkout
    </button>
    <button
      class="close-btn"
    >
      Close
    </button>
  </section>
</div>
`;

exports[`Navbar component should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        style="background: rgba(3, 3, 3, 0);"
      >
        <section
          class="navbar-container"
        >
          <h2
            class="title"
          >
            Boundless Book Bazaar
          </h2>
          <nav
            class="nav"
          >
            <a
              class="text-link"
              href="/"
            >
              Home
            </a>
            <a
              class="text-link"
              href="/shop"
            >
              Shop
            </a>
          </nav>
        </section>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      style="background: rgba(3, 3, 3, 0);"
    >
      <section
        class="navbar-container"
      >
        <h2
          class="title"
        >
          Boundless Book Bazaar
        </h2>
        <nav
          class="nav"
        >
          <a
            class="text-link"
            href="/"
          >
            Home
          </a>
          <a
            class="text-link"
            href="/shop"
          >
            Shop
          </a>
        </nav>
      </section>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Product Card Component should render correctly 1`] = `
<div>
  <section
    class="card"
  >
    <img
      alt="foo"
      class="card-image"
      src=""
    />
    <h3
      class="card-heading"
    >
      foo
    </h3>
    <label
      class="card-label"
      for="quantity"
    >
      Quantity:
      <input
        class="card-input"
        id="quantity"
        type="number"
        value="1"
      />
    </label>
    <p
      class="card-price"
    >
      $
      100
    </p>
    <button
      class="card-btn"
    >
      Add to cart
    </button>
  </section>
</div>
`;

exports[`Shop component should render correctly 1`] = `
<div>
  <section
    class="shop"
  >
    <section
      class="cart-status"
      role="status"
    >
      Items in Cart: 
      0
      <button
        class="show-cart"
      >
        Go to cart
      </button>
    </section>
    <span />
    <section
      class="book-container"
    >
      <section
        class="card"
      >
        <img
          alt="test book 1"
          class="card-image"
          src="https://images.unsplash.com/photo-1629992101753-56d196c8aabb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1590&q=80"
        />
        <h3
          class="card-heading"
        >
          test book 1
        </h3>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
          <input
            class="card-input"
            id="quantity"
            type="number"
            value="1"
          />
        </label>
        <p
          class="card-price"
        >
          $
          25
        </p>
        <button
          class="card-btn"
        >
          Add to cart
        </button>
      </section>
      <section
        class="card"
      >
        <img
          alt="test book 2"
          class="card-image"
          src=""
        />
        <h3
          class="card-heading"
        >
          test book 2
        </h3>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
          <input
            class="card-input"
            id="quantity"
            type="number"
            value="1"
          />
        </label>
        <p
          class="card-price"
        >
          $
          25
        </p>
        <button
          class="card-btn"
        >
          Add to cart
        </button>
      </section>
      <section
        class="card"
      >
        <img
          alt="test book 3"
          class="card-image"
          src=""
        />
        <h3
          class="card-heading"
        >
          test book 3
        </h3>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
          <input
            class="card-input"
            id="quantity"
            type="number"
            value="1"
          />
        </label>
        <p
          class="card-price"
        >
          $
          25
        </p>
        <button
          class="card-btn"
        >
          Add to cart
        </button>
      </section>
      <section
        class="card"
      >
        <img
          alt="test book 4"
          class="card-image"
          src=""
        />
        <h3
          class="card-heading"
        >
          test book 4
        </h3>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
          <input
            class="card-input"
            id="quantity"
            type="number"
            value="1"
          />
        </label>
        <p
          class="card-price"
        >
          $
          25
        </p>
        <button
          class="card-btn"
        >
          Add to cart
        </button>
      </section>
      <section
        class="card"
      >
        <img
          alt="test book 5"
          class="card-image"
          src=""
        />
        <h3
          class="card-heading"
        >
          test book 5
        </h3>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
          <input
            class="card-input"
            id="quantity"
            type="number"
            value="1"
          />
        </label>
        <p
          class="card-price"
        >
          $
          25
        </p>
        <button
          class="card-btn"
        >
          Add to cart
        </button>
      </section>
      <section
        class="card"
      >
        <img
          alt="test book 6"
          class="card-image"
          src=""
        />
        <h3
          class="card-heading"
        >
          test book 6
        </h3>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
          <input
            class="card-input"
            id="quantity"
            type="number"
            value="1"
          />
        </label>
        <p
          class="card-price"
        >
          $
          25
        </p>
        <button
          class="card-btn"
        >
          Add to cart
        </button>
      </section>
    </section>
  </section>
</div>
`;
